Admin view for PhotoVerification

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -55,7 +55,7 @@
                                                     <a th:href="@{/users/cpanel}" class="nav-link"
                                                        th:text="#{user.cpanel}"/></li>
                                                 <li th:if="${session.currentUserLevel == 1}">
-                                                    <a th:href="@{/users/vpanel}" class="nav-link"
+                                                    <a th:href="@{/users/vpanel/0}" class="nav-link"
                                                        th:text="#{user.vpanel}"/></li>
                                             </ul>
                                         </li>
