--- a/src/main/resources/templates/user_photo_verification_list.html
+++ b/src/main/resources/templates/user_photo_verification_list.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>The Wallet Project - User login</title>
+    <title>The Wallet Project - Awaiting verification list</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
-    <link rel="stylesheet" th:href="@{/css/user-login.css}"/>
+    <link rel="stylesheet" th:href="@{/css/cpanel.css}"/>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -28,35 +28,34 @@
 </div>
 
 <div th:replace="fragments/header :: header"></div>
-<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+
+<div class="site-blocks-cover overlay"
+     th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
      data-aos="fade" id="home-section">
-    <div class="container">
+
+    <div class="container" th:if="${session.currentUser != null}">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-                <h2 class="text-center login-title">Login</h2>
-                <form action="#" th:action="@{/auth/login}" th:object="${login}" method="post" class="login-form">
-                    <div class="form-group">
-
-                        <input type="text" th:field="*{username}" class="form-control transparent-input" placeholder="Username">
-                        <label class="error form-error" th:errors="*{username}">Username error placeholder</label>
-                    </div>
-                    <div class="form-group">
-
-                        <input type="password" th:field="*{password}" class="form-control transparent-input" placeholder="Password">
-                        <label class="error form-error" th:errors="*{password}">Password error placeholder</label>
-                    </div>
-                    <div class="button-container">
-                        <input type="submit" value="Login" class="btn btn-primary btn-login">
-                        <a th:href="@{/users/new}" class="btn btn-secondary btn-register">Register</a><br/>
-                        <a th:href="@{/forgotten}">Forgot password?</a>
-                    </div>
-                </form>
+                <br/><br/><br/>
+                <h2 th:if="list" th:text="#{user.list_waiting_verification}"/>
+                <h2 th:unless="list" th:text="#{user.list_waiting_verification_empty}"/>
+                <ul class="user-list">
+                    <th:block th:each="user : ${users}">
+                        <li class="user-item-search">
+                            <div class="user-name" th:text="${user.username}"></div>
+                            <div class="user-details-search" style="display: none;">
+                                <p><a th:href="@{/users/vpanel/{user_id}(user_id=${user.id})}"
+                                      class="profile-link">Proceed to verification</a></p>
+                                <p><a th:href="@{/users/{user_id}(user_id=${user.id})}" class="profile-link">View
+                                    Profile</a></p>
+                            </div>
+                        </li>
+                    </th:block>
+                </ul>
             </div>
         </div>
     </div>
 </div>
-
-<!--End code insertion-->
 
 
 <div th:replace="fragments/footer :: footer"></div>
@@ -73,6 +72,6 @@
 <script th:src="@{/js/jquery.sticky.js}"></script>
 <script th:src="@{/js/isotope.pkgd.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
+<script th:src="@{/js/search-results.js}"></script>
 </body>
 </html>
-
