--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -64,7 +64,7 @@
                                                th:text="#{user.my_wallets}"/></li>
                                         <li><a th:href="@{/cards}" class="nav-link"
                                                th:text="#{user.my_cards}"/></li>
-                                        <li><a th:href="@{/transactions}" class="nav-link"
+                                        <li><a th:href="@{/transactions/your_transactions}" class="nav-link"
                                                th:text="#{user.my_transactions}"/></li>
                                         <li><a th:href="@{/users/request}" class="nav-link"
                                                th:text="#{user.request_funds_menu}"/></li>
