--- a/src/main/resources/templates/current_user_transactions.html
+++ b/src/main/resources/templates/current_user_transactions.html
@@ -43,14 +43,16 @@
         <h1>Your Transactions</h1><br/>
         <!-- Filter Form -->
         <form th:action="@{/transactions/your_transactions}" method="post">
-<!--          <div class="form-group" >-->
-<!--            <label for="startDate">Start Date:</label>-->
-<!--            <input type="text" id="startDate" name="startDate" class="form-control" placeholder="yyyy-MM-dd">-->
-<!--          </div>-->
-<!--          <div class="form-group" >-->
-<!--            <label for="endDate">End Date:</label>-->
-<!--            <input type="text" id="endDate" name="endDate" class="form-control" placeholder="yyyy-MM-dd">-->
-<!--          </div>-->
+
+          <div class="form-group">
+            <label for="startDate" class="white-text">Start Date:</label>
+            <input type="date" id="startDate" name="startDate" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="endDate" class="white-text">End Date:</label>
+            <input type="date" id="endDate" name="endDate" class="form-control">
+          </div>
+
           <div class="form-group" >
             <label for="sortBy" class="white-text" >Sort By:</label>
             <select id="sortBy"  name="sortBy" class="form-control">
@@ -68,6 +70,9 @@
           </div>
           <div class="form-group">
             <button type="submit">Sort Transactions</button>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Filter Transactions</button>
           </div>
         </form>
         <!-- End Filter Form -->
