--- a/src/main/resources/templates/successful_transaction.html
+++ b/src/main/resources/templates/successful_transaction.html
@@ -4,7 +4,6 @@
   <title>Transaction Successful</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Include your CSS and other header content here -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}"/>
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
@@ -25,7 +24,6 @@
     }
   </style>
 </head>
-
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 <div id="overlayer"></div>
 <div class="loader">
@@ -34,18 +32,27 @@
   </div>
 </div>
 
+<!-- Include the header fragment -->
 <div th:replace="fragments/header :: header"></div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+<div class="site-blocks-cover overlay"
+     th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+     data-aos="fade" id="home-section">
+
+
+
+  <div class="container">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-md-10 mt-lg-5 text-center">
       <div class="success-message">
         <p>You successfully sent <span th:text="${transaction.amount}"></span>
-          to user <span th:text="${transaction.recipient.getRecipientIdentifier()}"></span>.</p>
+        BGN to user <span th:text="${transaction.recipient.getRecipientIdentifier()}"></span>.</p>
       </div>
     </div>
   </div>
+  </div>
 </div>
+
 
 <div th:replace="fragments/footer :: footer"></div>
 
