Implemented depositing money from bank card through the external API.

--- a/src/main/resources/templates/wallets_list.html
+++ b/src/main/resources/templates/wallets_list.html
@@ -64,6 +64,8 @@
                                         <a class="btn btn-primary"
                                            th:href="@{/wallets/{id}/overdraft(id=${wallet.getId()})}">Change
                                             Overdraft</a>
+                                        <a class="btn btn-primary"
+                                           th:href="@{/wallets/top-up/{id}(id=${wallet.id})}">Add money to this wallet</a>
                                     </div>
                                 </div>
                                 <br>
