--- a/src/main/resources/templates/user_invitation.html
+++ b/src/main/resources/templates/user_invitation.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>The Wallet Project - Error 781</title>
+    <title>The Wallet Project - User login</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -17,6 +16,7 @@
     <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/user-login.css}"/>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -30,23 +30,30 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
      data-aos="fade" id="home-section">
-
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-                <h1>781</h1><br/>
-                <div th:if="${error == null or error == ''}">
-                    <p th:utext="#{server.781}"></p>
-                </div>
-                <div th:unless="${error == null or error == ''}">
-                    <p th:text="${error}" />
-                </div>
+                <h2 class="text-center login-title">Login</h2>
+                <form action="#" th:action="@{/users/invite}" th:object="${invitation}" method="post" class="login-form">
+
+                    <div class="form-group">
+                        <label>
+                            <input type="text" th:field="*{email}" class="form-control transparent-input" placeholder="Email">
+                        </label>
+                    </div>
+
+                    <div class="button-container">
+                        <input type="submit" value="Send Invitation" class="btn btn-primary btn-login">
+                    </div>
+                </form>
 
             </div>
-
         </div>
     </div>
 </div>
+
+<!--End code insertion-->
+
 
 <div th:replace="fragments/footer :: footer"></div>
 
@@ -63,9 +70,5 @@
 <script th:src="@{/js/isotope.pkgd.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
 </body>
-</html></title>
-</head>
-<body>
-
-</body>
 </html>
+
