--- a/src/main/resources/templates/user_reg_by_invitation.html
+++ b/src/main/resources/templates/user_reg_by_invitation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>The Wallet Project - Error 781</title>
+    <title>The Wallet Project - Invitation consumed</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -18,7 +18,6 @@
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
-
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 <div id="overlayer"></div>
 <div class="loader">
@@ -27,29 +26,27 @@
     </div>
 </div>
 
+<!-- Include the header fragment -->
 <div th:replace="fragments/header :: header"></div>
-<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+
+<div class="site-blocks-cover overlay"
+     th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
      data-aos="fade" id="home-section">
 
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-                <h1>781</h1><br/>
-                <div th:if="${error == null or error == ''}">
-                    <p th:utext="#{server.781}"></p>
-                </div>
-                <div th:unless="${error == null or error == ''}">
-                    <p th:text="${error}" />
-                </div>
-
+                <h2 th:text="#{user.invitation_complete}" class="text-center"/>
+                <p th:text="#{user.invitation_complete_msg}"/>
             </div>
-
         </div>
     </div>
 </div>
 
+<!-- Include the footer fragment -->
 <div th:replace="fragments/footer :: footer"></div>
 
+<!-- Include JavaScript files -->
 <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/js/jquery-ui.js}"></script>
 <script th:src="@{/js/popper.min.js}"></script>
@@ -62,10 +59,5 @@
 <script th:src="@{/js/jquery.sticky.js}"></script>
 <script th:src="@{/js/isotope.pkgd.min.js}"></script>
 <script th:src="@{/js/main.js}"></script>
-</body>
-</html></title>
-</head>
-<body>
-
 </body>
 </html>
