--- a/src/main/resources/templates/transactions_not_enough_money_in_wallet.html
+++ b/src/main/resources/templates/transactions_not_enough_money_in_wallet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Transaction Successful</title>
+  <title>Not Enough Money in Wallet</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -16,11 +16,11 @@
   <link rel="stylesheet" th:href="@{/css/aos.css}"/>
   <link rel="stylesheet" th:href="@{/css/style.css}"/>
   <style>
-    .success-message {
+    .error-message {
       text-align: center;
       margin-top: 100px;
-      font-size: 24px;
-      color: green;
+      font-size: 50px;
+      color: red;
     }
 
     .btn-container {
@@ -51,13 +51,13 @@
   <div class="container">
     <div class="row align-items-center justify-content-center">
       <div class="col-md-10 mt-lg-5 text-center">
-        <div class="success-message">
-          <p>You successfully sent <span th:text="${transaction.amount}"></span>
-            BGN to user <span th:text="${transaction.recipient.getRecipientIdentifier()}"></span>.</p>
+        <div class="error-message">
+          <p>Oops! You don't have money in the wallet.</p>
+          <p>Go back to choose another one or explore our overdraft options.</p>
         </div>
         <div class="btn-container">
-          <a href="/" class="btn btn-primary">Back to Home</a>
-          <a href="/transactions/create" class="btn btn-success">Send More Money</a>
+          <a href="/" class="btn btn-primary">Back to HomePage</a>
+          <a href="/transactions/create" class="btn btn-success">Back to Transaction Center</a>
         </div>
       </div>
     </div>
