--- a/src/main/resources/templates/admin_change_interest.html
+++ b/src/main/resources/templates/admin_change_interest.html
@@ -16,19 +16,6 @@
     <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
-
-    <!-- CSS styles for card containers and buttons -->
-    <style>
-        /*.card-container {*/
-        /*    border: 1px solid #ddd; !* Add a 1px solid border with a light gray color *!*/
-        /*    padding: 15px; !* Add padding to create spacing between cards *!*/
-        /*    margin-bottom: 20px; !* Add margin to separate cards vertically *!*/
-        /*}*/
-
-        .btn {
-            white-space: nowrap; /* Prevent button text from wrapping to the next line */
-        }
-    </style>
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -41,10 +28,9 @@
 
 <div th:replace="fragments/header :: header"></div>
 
-<!-- Insert code here -->
+<!-- Add your code here -->
 
-<div class="site-blocks-cover overlay"
-     th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
      data-aos="fade" id="home-section">
     <div class="container">
         <div class="row align-items-center justify-content-center">
@@ -53,37 +39,20 @@
                     <div class="col-12">
                         <div class="card">
                             <div class="card-header">
-                                <h4 class="card-title" style="color: white">Add a payment method</h4>
+                                <h4 class="card-title" style="color: white">Update Interest Rate</h4>
                             </div>
                             <div class="card-body" style="justify-content: center">
-                                <div class="verify-content col-xxl-12 card-container" th:each="card: ${cards}">
-                                    <div class="d-flex align-items-center">
-                                        <div class="primary-number">
-                                            <h5 class="mb-0"
-                                                th:text="${(card.getId() % 2 == 0) ? 'Master card' : 'Visa'}">Master
-                                                Card</h5>
-                                            <small th:text="${'Card *********' + card.getCardNumber().substring(12)}">Credit
-                                                Card *********5478</small>
-                                            <br>
-                                            <small th:text="${'Expiration ' + card.getExpirationDate()}">Credit Card
-                                                *********5478</small>
-                                            <br>
-                                            <span class="text-success">Verified</span>
-                                        </div>
+                                <form th:action="@{/interest/change}" method="post" th:object="${interestRateDto}">
+                                    <div class="form-group">
+                                        <label for="currentInterestRate">Current Percentage Interest Rate:</label>
+                                        <span th:text="${currentInterestRate}"></span>
+                                        <input type="number" step="0.01" class="form-control" id="currentInterestRate" name="currentInterestRate" placeholder="Enter Interest Rate"
+                                               th:field="*{interest}" required>
+                                        <small class="text-danger" th:if="${#fields.hasErrors('interest')}" th:errors="*{interest}"></small>
                                     </div>
-                                    <div class="col-xl-4 mt-4">
-                                        <a class="btn btn-secondary btn-sm" href="#"
-                                           th:href="@{/cards/delete/{id} (id=${card.getId()})}">Delete</a>
-
-                                        <a class="btn btn-primary btn-sm" href="#"
-                                           th:href="@{/cards/{id}/update(id=${card.getId()})}">Update</a>
-                                    </div>
-                                </div>
-                                <br>
-                                <div class="mt-5 text-center" style="justify-content: center">
-                                    <a class="btn btn-primary" href="#" th:href="@{/cards/new}">Add New
-                                        Card</a>
-                                </div>
+                                    <button type="submit" class="btn btn-primary">Update</button>
+                                </form>
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -93,7 +62,7 @@
     </div>
 </div>
 
-<!-- End of code insertion -->
+<!-- End of your code -->
 
 <div th:replace="fragments/footer :: footer"></div>
 
